finish fixing logic to search for rare OR pathogenic. add results back to impala and put more workload on impala.?

--- a/nbs_genes/nbs_genes.ipynb
+++ b/nbs_genes/nbs_genes.ipynb
@@ -30,10 +30,11 @@
       "\n",
       "Annotated variants were then labled as pathogenic if they predicted a newborn to have an NBS conddition based on the following parameters:  \n",
       "- Presence of mutation(s) with appropriate inheritance (eg, 2 bi-allelic pathogenic mutations for a recessive disorder).  \n",
-      "- Mutations defined strictly as either:   \n",
-      "        - Annotated in ClinVar with a clinical significance of 4 or 5, but never 2 or 3 or labeled pathogenic in HGMD (to be added later) OR  \n",
-      "        - Novel but predicted to be disease-causing (ie, a stop-gain, stop-loss, splice-site, whole-exon or larger deletion, or frameshift)  OR  \n",
-      "        - DANN scores higher than specified in user argument below"
+      "\n",
+      "Mutations defined strictly as either:   \n",
+      "    - Annotated in ClinVar with a clinical significance of 4 or 5, but never 2 or 3 or labeled pathogenic in HGMD (to be added later)  \n",
+      "    OR    \n",
+      "    - Novel (in Kaviar with frequency less than .03 or no in Kaviar) but either predicted to be disease-causing with a SnpEff impact score of 'high' or a DANN score higher than specified cutoff below"
      ]
     },
     {
@@ -67,7 +68,7 @@
       "## kaviar ##\n",
       "############\n",
       "# enter kaviar frequency threshold\n",
-      "kav_freq = '.03'\n",
+      "kav_freq = '.01'\n",
       "\n",
       "###############\n",
       "## family id ##\n",
@@ -89,7 +90,7 @@
       "## dann_score ##\n",
       "################\n",
       "# enter minimum dann score for predicted NBS\n",
-      "dann_score = '0.95'\n",
+      "dann_score = '0.96'\n",
       "\n",
       "########################\n",
       "## database locations ##\n",
@@ -120,7 +121,7 @@
       "out_name = 'nbs_genes'"
      ],
      "language": "python",
-     "prompt_number": 133
+     "prompt_number": 2
     },
     {
      "cell_type": "heading",
@@ -200,9 +201,6 @@
       "# to connect to specific database, use the database argument\n",
       "conn=connect(host='glados19', port=21050)\n",
       "\n",
-      "# create a cursor object to interact with the db\n",
-      "cur = conn.cursor()\n",
-      "\n",
       "# format trio argument\n",
       "member_list = []\n",
       "\n",
@@ -219,7 +217,7 @@
       "member_arg = ' OR '.join(member_list)"
      ],
      "language": "python",
-     "prompt_number": 134
+     "prompt_number": 8
     },
     {
      "cell_type": "code",
@@ -230,7 +228,14 @@
        "output_type": "stream",
        "stream": "stdout",
        "text": [
-        "The following query was run on impala and the results were saved as nbs_kaviar: \n\n\nCREATE TABLE IF NOT EXISTS users_selasady.nbs_kaviar AS         \n          WITH bv as (\n              SELECT bv.sample_id, bv.chr as chrom, bv.pos, bv.id, bv.ref, \n                  bv.alt, bv.qual, bv.filter, bv.gt, k.alle_freq\n             FROM p7_platform.brady_variant bv\n             LEFT JOIN /* +SHUFFLE */ public_hg19.kaviar k\n                  ON bv.chr = k.chromosome\n                  AND bv.pos = k.pos\n                  AND bv.ref = k.ref\n                  AND bv.alt = k.alt\n             WHERE (k.alle_freq < .03 OR k.alle_freq IS NULL)\n            AND (bv.sample_id LIKE '%03' OR bv.sample_id LIKE '%01' OR bv.sample_id LIKE '%02')\n         )\n        SELECT bv.*, nbs.gene, nbs.entrez_id, nbs.ensembl_id, nbs.condition, \n            nbs.omim_phenotype, nbs.va_name, nbs.inheritance, nbs.allelic_condition,nbs.in_pgb, \n            nbs.level, nbs.feature, nbs.transcript_name, nbs.transcript_id, nbs.exon_number, \n            nbs.exon_id, nbs.gene_biotype, nbs.comments          \n        FROM bv, users_selasady.nbs_ensembl nbs\n       WHERE bv.chrom = nbs.chrom\n       AND bv.pos BETWEEN nbs.start and nbs.stop\n       \n"
+        "The following query will be run on impala: \n\n\n    CREATE TABLE users_selasady.nbs_kaviar AS         \n          WITH bv as (\n              SELECT bv.sample_id, bv.chr as chrom, bv.pos, bv.id, bv.ref, \n                  bv.alt, bv.qual, bv.filter, bv.gt, k.alle_freq, \n                  CASE WHEN (k.alle_freq < .01 OR k.alle_freq IS NULL) then 'rare'\n                  END as kaviar_rare\n             FROM p7_platform.brady_variant bv\n             LEFT JOIN /* +SHUFFLE */ public_hg19.kaviar k\n                  ON bv.chr = k.chromosome\n                  AND bv.pos = k.pos\n                  AND bv.ref = k.ref\n                  AND bv.alt = k.alt\n            AND (bv.sample_id LIKE '%03' OR bv.sample_id LIKE '%01' OR bv.sample_id LIKE '%02')\n         )\n        SELECT bv.*, nbs.gene, nbs.entrez_id, nbs.ensembl_id, nbs.condition, \n            nbs.omim_phenotype, nbs.va_name, nbs.inheritance, nbs.allelic_condition,nbs.in_pgb, \n            nbs.level, nbs.feature, nbs.transcript_name, nbs.transcript_id, nbs.exon_number, \n            nbs.exon_id, nbs.gene_biotype, nbs.comments          \n        FROM bv, users_selasady.nbs_ensembl nbs\n       WHERE bv.chrom = nbs.chrom\n       AND bv.pos BETWEEN nbs.start and nbs.stop\n       \nQuery finished. Closing connection."
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "\n"
        ]
       }
      ],
@@ -238,17 +243,18 @@
       "# create kaviar query\n",
       "kaviar_query = '''\n",
       "\n",
-      "CREATE TABLE IF NOT EXISTS {}.nbs_kaviar AS         \n",
+      "    CREATE TABLE {} AS         \n",
       "          WITH bv as (\n",
       "              SELECT bv.sample_id, bv.chr as chrom, bv.pos, bv.id, bv.ref, \n",
-      "                  bv.alt, bv.qual, bv.filter, bv.gt, k.alle_freq\n",
+      "                  bv.alt, bv.qual, bv.filter, bv.gt, k.alle_freq, \n",
+      "                  CASE WHEN (k.alle_freq < {} OR k.alle_freq IS NULL) then 'rare'\n",
+      "                  END as kaviar_rare\n",
       "             FROM {} bv\n",
       "             LEFT JOIN /* +SHUFFLE */ {} k\n",
       "                  ON bv.chr = k.chromosome\n",
       "                  AND bv.pos = k.pos\n",
       "                  AND bv.ref = k.ref\n",
       "                  AND bv.alt = k.alt\n",
-      "             WHERE (k.alle_freq < {} OR k.alle_freq IS NULL)\n",
       "            AND ({})\n",
       "         )\n",
       "        SELECT bv.*, nbs.gene, nbs.entrez_id, nbs.ensembl_id, nbs.condition, \n",
@@ -258,15 +264,26 @@
       "        FROM bv, users_selasady.nbs_ensembl nbs\n",
       "       WHERE bv.chrom = nbs.chrom\n",
       "       AND bv.pos BETWEEN nbs.start and nbs.stop\n",
-      "       '''.format(user_db, variant_table, kaviar_table, kav_freq, member_arg)\n",
+      "       '''.format('{}.nbs_kaviar'.format(user_db), kav_freq, variant_table, kaviar_table, member_arg)\n",
       "\n",
-      "# run kaviar query on impala\n",
-      "cur.execute(kaviar_query)\n",
+      "# open connection, run query, close connection \n",
+      "def run_query(query_name, db_name):\n",
+      "    # drop table if it exists\n",
+      "    cur = conn.cursor()\n",
+      "    cur.execute('DROP TABLE IF EXISTS {}'.format(db_name))\n",
+      "    cur.close()\n",
+      "    # run query \n",
+      "    print 'The following query was run on impala: \\n' + query_name\n",
+      "    cur = conn.cursor()\n",
+      "    cur.execute(query_name)\n",
+      "    print 'Query finished. Closing connection.'\n",
+      "    cur.close()\n",
       "\n",
-      "print 'The following query was run on impala and the results were saved as nbs_kaviar: \\n' + kaviar_query"
+      "# run kaviar annotation query\n",
+      "run_query(kaviar_query, '{}.nbs_kaviar'.format(user_db))"
      ],
      "language": "python",
-     "prompt_number": 135
+     "prompt_number": 33
     },
     {
      "cell_type": "heading",
@@ -289,10 +306,7 @@
       "features. DANN scores have been shown to outperform both CADD and FATHMM \n",
       "(http://www.enlis.com/blog/2015/03/17/the-best-variant-prediction-method-that-no-one-is-using/).\n",
       "\n",
-      "DANN scores are provided for SNV's and range between 0 and 1. The closer a score is to 1, the more pathogenic the variant. \n",
-      "\n",
-      "The following query was used to annotate the nbs variants with DANN scores by matching on chromosome and position, \n",
-      "then outputting the score for the alt allele. "
+      "DANN scores are provided for SNV's and range between 0 and 1. The closer a score is to 1, the more pathogenic the variant. The DANN table was matched on chromosome and position, then outputting the score for the alt allele. "
      ]
     },
     {
@@ -304,19 +318,25 @@
        "output_type": "stream",
        "stream": "stdout",
        "text": [
-        "The following query was run on impala and the results were saved as nbs_annotated: \n\n\n       CREATE TABLE IF NOT EXISTS nbs_annotated AS \n        WITH n as (\n            SELECT nbs.*, clin.clin_hgvs, clin.clin_sig, clin.clin_dbn, clin.clin_acc,\n                CASE WHEN (clin.clin_sig NOT REGEXP '3|2[^5]|2 (replace this text with a dollar sign)'  \n                    AND  clin.clin_sig REGEXP '4|[^25]5|^5') THEN 'Y'\n                    ELSE 'N'\n                END AS clin_patho\n            FROM users_selasady.nbs_kaviar nbs\n            LEFT JOIN public_hg19.clinvar clin\n                ON nbs.chrom = clin.chrom\n                AND nbs.pos = clin.pos\n                AND nbs.ref = clin.ref\n                AND nbs.alt = clin.alt\n         )\n        SELECT n.*, \n            CASE WHEN n.alt = 'A' THEN d.score_a\n                WHEN n.alt = 'T' THEN d.score_t\n                WHEN n.alt = 'G' THEN d.score_g\n                WHEN n.alt = 'C' THEN d.score_c \n             END as dann_score, \n             CASE\n                 WHEN SUBSTRING(n.sample_id, -2) = '01'THEN 'M'\n                 WHEN SUBSTRING(n.sample_id, -2) = '02' THEN 'F'\n                 WHEN SUBSTRING(n.sample_id, -2) = '03'THEN 'NB'\n             END as member,\n             SUBSTRING(n.sample_id, 1, (length(n.sample_id)-3)) as family_id,\n             CONCAT(n.chrom, ':', CAST(n.pos AS STRING), ':', n.ref, ':', n.alt, ':', SUBSTRING(n.sample_id, 1, (length(n.sample_id)-3))) as var_id\n        FROM n\n        LEFT JOIN public_hg19.dann d\n            ON n.chrom = d.chrom\n            AND n.pos = d.pos\n            \n"
+        "The following query will be run on impala: \n\n\n       CREATE TABLE IF NOT EXISTS users_selasady.nbs_annotated AS \n        WITH n as (\n            SELECT nbs.*, clin.clin_hgvs, clin.clin_sig, clin.clin_dbn, clin.clin_acc,\n                CASE WHEN (clin.clin_sig NOT REGEXP '3|2[^5]|2 (replace this text with a dollar sign)'  \n                    AND  clin.clin_sig REGEXP '4|[^25]5|^5') THEN 'Y'\n                    ELSE 'N'\n                END AS clin_patho\n            FROM users_selasady.nbs_kaviar nbs\n            LEFT JOIN public_hg19.clinvar clin\n                ON nbs.chrom = clin.chrom\n                AND nbs.pos = clin.pos\n                AND nbs.ref = clin.ref\n                AND nbs.alt = clin.alt\n         )\n        SELECT n.*, \n            CASE WHEN n.alt = 'A' THEN d.score_a\n                WHEN n.alt = 'T' THEN d.score_t\n                WHEN n.alt = 'G' THEN d.score_g\n                WHEN n.alt = 'C' THEN d.score_c \n             END as dann_score, \n             CASE\n                 WHEN SUBSTRING(n.sample_id, -2) = '01'THEN 'M'\n                 WHEN SUBSTRING(n.sample_id, -2) = '02' THEN 'F'\n                 WHEN SUBSTRING(n.sample_id, -2) = '03'THEN 'NB'\n             END as member,\n             SUBSTRING(n.sample_id, 1, (length(n.sample_id)-3)) as family_id,\n             CONCAT(n.chrom, ':', CAST(n.pos AS STRING), ':', n.ref, ':', n.alt) as var_id\n        FROM n\n        LEFT JOIN public_hg19.dann d\n            ON n.chrom = d.chrom\n            AND n.pos = d.pos\n            \nQuery finished. Closing connection."
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "\n"
        ]
       }
      ],
      "input": [
       "dann_query = '''\n",
       "\n",
-      "       CREATE TABLE IF NOT EXISTS nbs_annotated AS \n",
+      "       CREATE TABLE IF NOT EXISTS {}.nbs_annotated AS \n",
       "        WITH n as (\n",
       "            SELECT nbs.*, clin.clin_hgvs, clin.clin_sig, clin.clin_dbn, clin.clin_acc,\n",
       "                CASE WHEN (clin.clin_sig NOT REGEXP '3|2[^5]|2 (replace this text with a dollar sign)'  \n",
       "                    AND  clin.clin_sig REGEXP '4|[^25]5|^5') THEN 'Y'\n",
-      "                    ELSE 'N'\n",
       "                END AS clin_patho\n",
       "            FROM {}.nbs_kaviar nbs\n",
       "            LEFT JOIN {} clin\n",
@@ -330,7 +350,7 @@
       "                WHEN n.alt = 'T' THEN d.score_t\n",
       "                WHEN n.alt = 'G' THEN d.score_g\n",
       "                WHEN n.alt = 'C' THEN d.score_c \n",
-      "             END as dann_score, \n",
+      "             END as dann_score,  \n",
       "             CASE\n",
       "                 WHEN SUBSTRING(n.sample_id, -2) = '01'THEN 'M'\n",
       "                 WHEN SUBSTRING(n.sample_id, -2) = '02' THEN 'F'\n",
@@ -342,15 +362,13 @@
       "        LEFT JOIN {} d\n",
       "            ON n.chrom = d.chrom\n",
       "            AND n.pos = d.pos\n",
-      "            '''.format(user_db, clinvar_table, dann_table)\n",
+      "            '''.format(user_db, user_db, clinvar_table, dann_table)\n",
       "\n",
       "# run kaviar query on impala\n",
-      "cur.execute(dann_query)\n",
-      "\n",
-      "print 'The following query was run on impala and the results were saved as nbs_annotated: \\n' + dann_query"
+      "run_query(dann_query, '{}.nbs_annotated'.format(user_db))"
      ],
      "language": "python",
-     "prompt_number": 124
+     "prompt_number": 40
     },
     {
      "cell_type": "heading",
@@ -376,13 +394,15 @@
       "    SELECT * FROM {}.nbs_annotated\n",
       "    \"\"\".format(user_db)\n",
       "# run query on impala\n",
+      "cur = conn.cursor()\n",
       "cur.execute(nbs_query)\n",
       "\n",
       "# store results as pandas data frame\n",
-      "nbs_df = as_pandas(cur)"
+      "nbs_df = as_pandas(cur)\n",
+      "cur.close()"
      ],
      "language": "python",
-     "prompt_number": 125
+     "prompt_number": 10
     },
     {
      "cell_type": "heading",
@@ -436,7 +456,7 @@
       "    print str(e)"
      ],
      "language": "python",
-     "prompt_number": 126
+     "prompt_number": 11
     },
     {
      "cell_type": "markdown",
@@ -454,6 +474,7 @@
      "outputs": [],
      "input": [
       "import numpy as np\n",
+      "import pandas as pd\n",
       "\n",
       "# add snpeff annotations back to dataframe\n",
       "def parse_snpeff(input_df):\n",
@@ -479,14 +500,40 @@
       "    return df_functional\n",
       "    \n",
       "# merge nbs_genes with functional annotations\n",
-      "nbs_annot = parse_snpeff(nbs_df)\n",
-      "\n",
-      "# label variants considered pathogenic \n",
-      "nbs_annot['pathogenic'] = (nbs_annot['impact'] == 'HIGH') | (nbs_annot['clin_patho'] == 'Y' )| (nbs_annot['dann_score'] >= dann_score)\n",
-      "#nbs_annot['pathogenic'] = (nbs_annot['impact'] == 'HIGH') | (nbs_annot['clin_patho'] == 'Y' )"
+      "nbs_annot = parse_snpeff(nbs_df)"
      ],
      "language": "python",
-     "prompt_number": 130
+     "prompt_number": 12
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "For downstream analysis, variants were labled as predictive if they were rare variants with a high SnpEff impact score or a predicted DANN pathogenicity rating of higher than the cutoff from user arguments, or if they were labeled as clinically significant in ClinVar. "
+     ]
+    },
+    {
+     "cell_type": "code",
+     "execution_count": null,
+     "metadata": {},
+     "outputs": [],
+     "input": [
+      "# label variants considered pathogenic \n",
+      "nbs_annot['predictive'] =  ((nbs_annot['kaviar_rare'] == 'rare') & ((nbs_annot['impact'] == 'HIGH') | (nbs_annot['dann_score'] >= dann_score))) | (nbs_annot['clin_patho'] == 'Y')"
+     ],
+     "language": "python",
+     "prompt_number": 17
+    },
+    {
+     "cell_type": "code",
+     "execution_count": null,
+     "metadata": {},
+     "outputs": [],
+     "input": [
+      "nbs_annot.to_csv('./nbs_testing.csv', header=True, encoding='utf-8', index=False)"
+     ],
+     "language": "python",
+     "prompt_number": 29
     },
     {
      "cell_type": "markdown",
@@ -504,7 +551,7 @@
        "output_type": "stream",
        "stream": "stdout",
        "text": [
-        "Number of newborn variants: 14102\nNumber of mother variants: 12937\nNumber of father variants: 12218\n"
+        "Number of newborn variants: 428625\nNumber of mother variants: 384656\nNumber of father variants: 380544\n"
        ]
       }
      ],
@@ -519,7 +566,7 @@
       "print \"Number of father variants: \" + str(len(fathers))"
      ],
      "language": "python",
-     "prompt_number": 131
+     "prompt_number": 18
     },
     {
      "cell_type": "markdown",
@@ -535,22 +582,32 @@
      "cell_type": "code",
      "execution_count": null,
      "metadata": {},
-     "outputs": [],
+     "outputs": [
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "0\n"
+       ]
+      }
+     ],
      "input": [
       "# disable erroneous pandas warning\n",
       "pd.options.mode.chained_assignment = None\n",
       "\n",
       "# subset variants by variant MOI and/or zygosity\n",
-      "nb_dominant = newborns[(newborns['inheritance'] == 'AD')]\n",
+      "nb_dominant = newborns[((newborns['inheritance'] == 'AD') & (newborns['predictive'] == True))]\n",
       "nb_dominant.name = 'dominant'\n",
       "\n",
-      "nb_hom_recessive = newborns[((newborns['inheritance'] == 'AR') & (newborns['gt'] == '1/1'))]\n",
-      "nb_hom_recessive.name = 'hom_recessive'\n",
+      "print len(nb_dominant)\n",
       "\n",
-      "nb_het = newborns[((newborns['inheritance'] == 'AR') & (newborns['gt'] == '0/1'))]"
+      "# nb_hom_recessive = newborns[((newborns['inheritance'] == 'AR') & (newborns['gt'] == '1/1'))]\n",
+      "# nb_hom_recessive.name = 'hom_recessive'\n",
+      "# \n",
+      "# nb_het = newborns[((newborns['inheritance'] == 'AR') & (newborns['gt'] == '0/1'))]"
      ],
      "language": "python",
-     "prompt_number": 132
+     "prompt_number": 25
     },
     {
      "cell_type": "heading",
@@ -565,8 +622,9 @@
      "metadata": {},
      "source": [
       "Heterozygous variants in autosomal recessive regions were examined for compound heterozygosity, as follows:   \n",
-      "- Newborns must inherit at least one variant from each parent, at different positions on the same gene  \n",
-      "- Parents must be heterozygous for the matching variant  \n",
+      "- Newborns must have variants at more than one position on the same gene, with each variant being inherited from a het parent\n",
+      "\n",
+      "Newborn het variants were subset for only variants inherited from het parents, and grouped by gene: \n",
       "    "
      ]
     },
