--- a/nbs_genes/nbs_genes.ipynb
+++ b/nbs_genes/nbs_genes.ipynb
@@ -22,19 +22,15 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "Variants were annotated with the NBS gene table provided by Ben Solomon at ITMI. Variants located in NBS gene regions were filtered, keeping only variants with a Kaviar frequency specified in the user argument section below. \n",
+      "Variants were annotated with the NBS gene table provided by Ben Solomon at ITMI. Variants located in NBS gene regions were annotated with Kaviar frequency, ClinVar clinical significance ratings, DANN predicted pathogenicity scores for SNV's, and coding consequence predictions using SnpEff. \n",
       "\n",
-      "Candidate variants were then annotated with ClinVar, DANN scores for SNV's and coding consequence predictions using SnpEff. \n",
-      "\n",
-      "Results were reported for Dominant, homozygous recessive and compound heterozygotes. \n",
-      "\n",
-      "Annotated variants were then labled as pathogenic if they predicted a newborn to have an NBS conddition based on the following parameters:  \n",
+      "Variants were filtered for appropriate mode of inheritance and then labeled as predictive when meeting the following conditions:   \n",
       "- Presence of mutation(s) with appropriate inheritance (eg, 2 bi-allelic pathogenic mutations for a recessive disorder).  \n",
       "\n",
       "Mutations defined strictly as either:   \n",
       "    - Annotated in ClinVar with a clinical significance of 4 or 5, but never 2 or 3 or labeled pathogenic in HGMD (to be added later)  \n",
       "    OR    \n",
-      "    - Novel (in Kaviar with frequency less than .03 or no in Kaviar) but either predicted to be disease-causing with a SnpEff impact score of 'high' or a DANN score higher than specified cutoff below"
+      "    - Novel (in Kaviar with frequency less than .03 or not in Kaviar) but either predicted to be disease-causing with a SnpEff impact score of 'high' or a DANN score higher than specified cutoff below"
      ]
     },
     {
@@ -68,7 +64,7 @@
       "## kaviar ##\n",
       "############\n",
       "# enter kaviar frequency threshold\n",
-      "kav_freq = '.01'\n",
+      "kav_freq = '.03'\n",
       "\n",
       "###############\n",
       "## family id ##\n",
@@ -96,7 +92,7 @@
       "## database locations ##\n",
       "########################\n",
       "# enter user database to output tables\n",
-      "user_db = 'users_selasady'\n",
+      "out_db = 'users_selasady'\n",
       "# enter database.name for variant table\n",
       "variant_table = 'p7_platform.brady_variant'\n",
       "# enter database.name of kaviar table\n",
@@ -106,9 +102,9 @@
       "# enter database.name of dann table\n",
       "dann_table = 'public_hg19.dann'\n",
       "\n",
-      "###############\n",
-      "## file info ##\n",
-      "###############\n",
+      "#################\n",
+      "## system info ##\n",
+      "#################\n",
       "# enter path to snpEff.jar on your computer\n",
       "\n",
       "# windows\n",
@@ -121,7 +117,7 @@
       "out_name = 'nbs_genes'"
      ],
      "language": "python",
-     "prompt_number": 2
+     "prompt_number": 41
     },
     {
      "cell_type": "heading",
@@ -185,8 +181,31 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "For all trio members in the families listed above, variants were filtered using Kaviar to retain only variants with a Kaviar frequency of less than that specified in section 1, or variants not listed in Kaviar at all. The rare variants were then joined with the nbs_ensembl table to locate rare variants falling in NBS gene regions.  "
+      "For all specified trio members, variants were annotated with Kaviar, labeling variants under the Kaviar frequency threshold, or not listed in Kaviar, as rare. Variants were then joined with the nbs_ensembl table to retain only variants falling in NBS gene regions.  "
      ]
+    },
+    {
+     "cell_type": "code",
+     "execution_count": null,
+     "metadata": {},
+     "outputs": [],
+     "input": [
+      "# format trio argument\n",
+      "member_list = []\n",
+      "for member in trio_member:\n",
+      "    if member == 'NB':\n",
+      "        member_list.append(\"bv.sample_id LIKE '%03'\")\n",
+      "    if member == 'M':\n",
+      "        member_list.append(\"bv.sample_id LIKE '%01'\")\n",
+      "    if member == 'F':\n",
+      "        member_list.append(\"bv.sample_id LIKE '%02'\")\n",
+      "    if member_list == 'all':\n",
+      "        member_list =[]\n",
+      "        \n",
+      "member_arg = 'AND (' + ' OR '.join(member_list) + ')'"
+     ],
+     "language": "python",
+     "prompt_number": 36
     },
     {
      "cell_type": "code",
@@ -199,25 +218,10 @@
       "from impala.util import as_pandas\n",
       "\n",
       "# to connect to specific database, use the database argument\n",
-      "conn=connect(host='glados19', port=21050)\n",
-      "\n",
-      "# format trio argument\n",
-      "member_list = []\n",
-      "\n",
-      "for member in trio_member:\n",
-      "    if member == 'NB':\n",
-      "        member_list.append(\"bv.sample_id LIKE '%03'\")\n",
-      "    if member == 'M':\n",
-      "        member_list.append(\"bv.sample_id LIKE '%01'\")\n",
-      "    if member == 'F':\n",
-      "        member_list.append(\"bv.sample_id LIKE '%02'\")\n",
-      "    if member_list == 'all':\n",
-      "        member_list =[]\n",
-      "        \n",
-      "member_arg = ' OR '.join(member_list)"
+      "conn=connect(host='glados19', port=21050)"
      ],
      "language": "python",
-     "prompt_number": 8
+     "prompt_number": 39
     },
     {
      "cell_type": "code",
@@ -243,7 +247,7 @@
       "# create kaviar query\n",
       "kaviar_query = '''\n",
       "\n",
-      "    CREATE TABLE {} AS         \n",
+      "    CREATE TABLE {}.nbs_kaviar AS         \n",
       "          WITH bv as (\n",
       "              SELECT bv.sample_id, bv.chr as chrom, bv.pos, bv.id, bv.ref, \n",
       "                  bv.alt, bv.qual, bv.filter, bv.gt, k.alle_freq, \n",
@@ -255,32 +259,32 @@
       "                  AND bv.pos = k.pos\n",
       "                  AND bv.ref = k.ref\n",
       "                  AND bv.alt = k.alt\n",
-      "            AND ({})\n",
+      "                  {}\n",
       "         )\n",
       "        SELECT bv.*, nbs.gene, nbs.entrez_id, nbs.ensembl_id, nbs.condition, \n",
       "            nbs.omim_phenotype, nbs.va_name, nbs.inheritance, nbs.allelic_condition,nbs.in_pgb, \n",
       "            nbs.level, nbs.feature, nbs.transcript_name, nbs.transcript_id, nbs.exon_number, \n",
       "            nbs.exon_id, nbs.gene_biotype, nbs.comments          \n",
-      "        FROM bv, users_selasady.nbs_ensembl nbs\n",
+      "       FROM bv, users_selasady.nbs_ensembl nbs\n",
       "       WHERE bv.chrom = nbs.chrom\n",
       "       AND bv.pos BETWEEN nbs.start and nbs.stop\n",
-      "       '''.format('{}.nbs_kaviar'.format(user_db), kav_freq, variant_table, kaviar_table, member_arg)\n",
+      "       '''.format(out_db, kav_freq, variant_table, kaviar_table, member_arg)\n",
       "\n",
       "# open connection, run query, close connection \n",
       "def run_query(query_name, db_name):\n",
       "    # drop table if it exists\n",
       "    cur = conn.cursor()\n",
-      "    cur.execute('DROP TABLE IF EXISTS {}'.format(db_name))\n",
+      "    cur.execute('DROP TABLE IF EXISTS {}.{}'.format(out_db,db_name))\n",
       "    cur.close()\n",
       "    # run query \n",
-      "    print 'The following query was run on impala: \\n' + query_name\n",
+      "    print 'Running the following query was run on impala: \\n' + query_name\n",
       "    cur = conn.cursor()\n",
       "    cur.execute(query_name)\n",
       "    print 'Query finished. Closing connection.'\n",
       "    cur.close()\n",
       "\n",
       "# run kaviar annotation query\n",
-      "run_query(kaviar_query, '{}.nbs_kaviar'.format(user_db))"
+      "run_query(kaviar_query, 'nbs_kaviar')"
      ],
      "language": "python",
      "prompt_number": 33
@@ -297,16 +301,9 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "Rare variants were annotated with the ClinVar table using genomic position. Variants with a ClinVar significance \n",
-      "rating of 4 or 5, but never 2 or 3, were marked with a 'Y' in the clin_patho column to denote non-conflicted \n",
-      "pathogenically significant ratings.\n",
+      "Variants in NBS gene regions were then annotated with the ClinVar table by genomic position. Variants with a ClinVar significance rating of 4 or 5, but never 2 or 3, were marked with a 'Y' in the clin_patho column to denote non-conflicted pathogenically significant ratings.\n",
       "\n",
-      "DANN scores whole-genome variants by training a deep neural network (DNN). DNNs can capture non-linear \n",
-      "relationships among features, and are better suited than SVMs for problems with a large number of samples and \n",
-      "features. DANN scores have been shown to outperform both CADD and FATHMM \n",
-      "(http://www.enlis.com/blog/2015/03/17/the-best-variant-prediction-method-that-no-one-is-using/).\n",
-      "\n",
-      "DANN scores are provided for SNV's and range between 0 and 1. The closer a score is to 1, the more pathogenic the variant. The DANN table was matched on chromosome and position, then outputting the score for the alt allele. "
+      "DANN scores are provided for SNV's and range between 0 and 1. The closer a score is to 1, the more pathogenic the variant. The DANN table was matched to variants on genomic position and alternate allele. "
      ]
     },
     {
@@ -362,10 +359,10 @@
       "        LEFT JOIN {} d\n",
       "            ON n.chrom = d.chrom\n",
       "            AND n.pos = d.pos\n",
-      "            '''.format(user_db, user_db, clinvar_table, dann_table)\n",
+      "            '''.format(out_db, out_db, clinvar_table, dann_table)\n",
       "\n",
       "# run kaviar query on impala\n",
-      "run_query(dann_query, '{}.nbs_annotated'.format(user_db))"
+      "run_query(dann_query, 'nbs_annotated')"
      ],
      "language": "python",
      "prompt_number": 40
@@ -392,7 +389,7 @@
       "# query to left join nbs_annotated variants with DANN scores\n",
       "nbs_query = \"\"\"\n",
       "    SELECT * FROM {}.nbs_annotated\n",
-      "    \"\"\".format(user_db)\n",
+      "    \"\"\".format(out_db)\n",
       "# run query on impala\n",
       "cur = conn.cursor()\n",
       "cur.execute(nbs_query)\n",
@@ -402,7 +399,29 @@
       "cur.close()"
      ],
      "language": "python",
-     "prompt_number": 10
+     "prompt_number": 42
+    },
+    {
+     "cell_type": "code",
+     "execution_count": null,
+     "metadata": {},
+     "outputs": [
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "104069 variants located in NBS regions.\n"
+       ]
+      }
+     ],
+     "input": [
+      "if len(nbs_df) > 0:\n",
+      "    print str(len(nbs_df)) + ' variants located in NBS regions.'\n",
+      "else: \n",
+      "    print \"No variants located in NBS regions.\""
+     ],
+     "language": "python",
+     "prompt_number": 47
     },
     {
      "cell_type": "heading",
@@ -434,17 +453,17 @@
       "        # setup file names\n",
       "        tsv_outname = '{}.tsv'.format(os.path.join(os.getcwd(), out_name))\n",
       "        vcf_outname = '{}.vcf'.format(os.path.join(os.getcwd(), out_name))\n",
-      "        # subset columns to output to vcf file\n",
+      "        # these columns are output to vcf file\n",
       "        df = input_df[['chrom', 'pos', 'ref', 'alt', 'qual', 'filter', 'gt']]\n",
       "        # write to file for conversion to vcf\n",
       "        df.to_csv(tsv_outname, header=True, encoding='utf-8', sep=\"\\t\", index=False)\n",
       "        # run tab2vcf and upon success, run snpeff\n",
       "        vcf_process = subp.Popen(['python', 'tab2vcf.py', tsv_outname])\n",
       "        vcf_process.wait()\n",
-      "        # command to run snpeff\n",
-      "        snpeeff_cmd = 'java -Xmx4g -jar {} -v GRCh37.75 {} > nbs_snpeff.vcf'.format(snpeff_path, vcf_outname)\n",
+      "        # command to run snpeff \n",
+      "        snpeff_cmd = 'java -Xmx4g -jar {} -v GRCh37.75 {} > nbs_snpeff.vcf'.format(snpeff_path, vcf_outname)\n",
       "        # run snpeff on vcf file\n",
-      "        snpeff_process = subp.Popen(snpeeff_cmd, shell=True)\n",
+      "        snpeff_process = subp.Popen(snpeff_cmd, shell=True)\n",
       "        snpeff_process.wait()\n",
       "    else:\n",
       "        print \"Make sure you entered the correct path to snpEff.jar\"\n",
@@ -456,15 +475,13 @@
       "    print str(e)"
      ],
      "language": "python",
-     "prompt_number": 11
+     "prompt_number": 63
     },
     {
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "The functional annotations were read back into Python, parsed and matched with the each respective variant data frame. \n",
-      "\n",
-      "Annotated variants were then labled as pathogenic if they predicted a newborn to have an NBS conddition based on the parameters specified in the user arguments above. "
+      "The functional annotations were read back into Python, parsed and matched with the each respective variant data frame. "
      ]
     },
     {
@@ -472,6 +489,24 @@
      "execution_count": null,
      "metadata": {},
      "outputs": [],
+     "input": [
+      ""
+     ],
+     "language": "python"
+    },
+    {
+     "cell_type": "code",
+     "execution_count": null,
+     "metadata": {},
+     "outputs": [
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "11901674\n"
+       ]
+      }
+     ],
      "input": [
       "import numpy as np\n",
       "import pandas as pd\n",
@@ -487,23 +522,24 @@
       "    # merge truncated info field with annot_vcf\n",
       "    annot_vcf = annot_vcf[np.r_[0, 1, 3:7, 9]]\n",
       "    annot_df = pd.concat([annot_vcf, info_df], axis=1)\n",
-      "    # remove duplicated rows\n",
-      "    annot_df.drop_duplicates(inplace=True)\n",
       "    # rename columns\n",
       "    annot_df.columns =['chrom', 'pos', 'ref', 'alt', 'qual', 'filter', 'gt', 'effect', 'impact', 'gene_name', 'gene_id', 'feature_type', 'feature_id', 'tx_biotype', 'rank', 'hgvs_c', 'hgvs_p']\n",
+      "    # drop unnecessary columns before merging\n",
+      "    annot_df.drop(['qual', 'filter', 'gene_name', 'gene_id', 'feature_id', 'feature_type', 'rank'], axis=1, inplace=True)\n",
       "    # merge annotations with variant table\n",
       "    df_functional = pd.merge(input_df, annot_df, on=['chrom', 'pos', 'ref', 'alt', 'gt'], how='left')\n",
-      "    # # drop columns duplicated after merge and unnecessary columns\n",
-      "    df_functional.drop(['qual_y', 'filter_y', 'gene_name', 'gene_id', 'feature_id', 'feature_type', 'rank'], axis=1, inplace=True)\n",
-      "    # rename columns ending in _x from merge\n",
-      "    df_functional.rename(columns=lambda x: x.replace('_x', ''), inplace=True)\n",
-      "    return df_functional\n",
+      "    print len(df_functional)\n",
+      "    # # # drop unnecessary columns\n",
+      "    # df_functional.drop(['qual_y', 'filter_y', 'gene_name', 'gene_id', 'feature_id', 'feature_type', 'rank'], axis=1, inplace=True)\n",
+      "    # # rename columns ending in _x from merge\n",
+      "    # df_functional.rename(columns=lambda x: x.replace('_x', ''), inplace=True)\n",
+      "    # return df_functional\n",
       "    \n",
       "# merge nbs_genes with functional annotations\n",
       "nbs_annot = parse_snpeff(nbs_df)"
      ],
      "language": "python",
-     "prompt_number": 12
+     "prompt_number": 64
     },
     {
      "cell_type": "markdown",
