--- a/nbs_genes/nbs_genes.ipynb
+++ b/nbs_genes/nbs_genes.ipynb
@@ -45,7 +45,7 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "Enter your search paramaters below. \n",
+      "Enter your search paramaters below. If wanting to search in all samples or trio members, enter 'all'. \n",
       "\n",
       "When entering a list, enter as comma_separated values, with each variable surrounded by quotes, no spaces. \n",
       "Ex: \n",
@@ -79,7 +79,7 @@
       "####################\n",
       "## trio member(s) ##\n",
       "####################\n",
-      "# enter as NB, M, and/or F, or all to include extended family if available\n",
+      "# enter as NB, M, and/or F, or 'all' to include extended family if available\n",
       "trio_member = 'NB','M','F'\n",
       "\n",
       "################\n",
@@ -153,20 +153,16 @@
      "metadata": {},
      "source": [
       "Chromosome, start and stop positions were added to the NBS Gene list by joining it with the \n",
-      "ensembl_genes table using gene name. This resulted in mulitple listings per gene for each exon, \n",
+      "ucsc_genes table using gene name. This resulted in mulitple listings per gene for each exon, \n",
       "allowing for more precise matches. \n",
       "\n",
-      "        CREATE TABLE users_selasady.nbs_ensembl AS \n",
-      "            SELECT DISTINCT nbs.gene, nbs.entrez_gene_id as entrez_id, ens.gene_id AS ensembl_id, \n",
-      "                ens.chromosome as chrom, ens.start, ens.stop, nbs.condition, nbs.omim_phenotype, \n",
-      "                nbs.va_name, nbs.inheritance, nbs.allelic_condition, nbs.in_pgb, nbs.level, ens.feature, \n",
-      "                ens.transcript_name, ens.transcript_id, ens.exon_number, ens.exon_id, ens.gene_biotype, nbs.comments\n",
-      "            FROM users_selasady.nbs_genes nbs\n",
-      "            LEFT JOIN\n",
-      "                public_hg19.ensembl_genes ens\n",
-      "                ON nbs.gene = ens.gene_name\n",
+      "        CREATE TABLE nbs_ucsc AS (\n",
+      "             SELECT nbs.*, ucsc.ucsc_id, ucsc.chrom, ucsc.txstart, ucsc.txend\n",
+      "             FROM nbs_genes as nbs, p7_ref_grch37.ucsc_genes as ucsc\n",
+      "             WHERE nbs.gene = ucsc.gene_name\n",
+      "           )\n",
       "\n",
-      "The results were saved as users _ selasady.nbs _ ensembl containing 20872 rows. "
+      "The results were saved as users _ selasady.nbs _ ucsc containing 682 rows. "
      ]
     },
     {
@@ -202,7 +198,9 @@
       "    if member_list == 'all':\n",
       "        member_list =[]\n",
       "        \n",
-      "member_arg = 'AND (' + ' OR '.join(member_list) + ')'"
+      "member_arg = 'AND (' + ' OR '.join(member_list) + ')'\n",
+      "\n",
+      "# format all other arguments\n"
      ],
      "language": "python",
      "prompt_number": 36
