Switched to UCSC, add dbnfsp when available

--- a/nbs_genes/nbs_genes.ipynb
+++ b/nbs_genes/nbs_genes.ipynb
@@ -45,13 +45,26 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "Enter your search paramaters below. If wanting to search in all samples or trio members, enter 'all'. \n",
+      "Enter your search paramaters below. \n",
       "\n",
-      "When entering a list, enter as comma_separated values, with each variable surrounded by quotes, no spaces. \n",
-      "Ex: \n",
-      "trio_member = 'NB','M','F'\n",
+      "Sample ID (sample_list)   \n",
       "\n",
-      "When uploading a file, enter each item on a separate line and save as a .txt file. "
+      "- Enter a list of exact sample id's as comma_separated values, in the following format:  \n",
+      "\n",
+      "    - sample_list = '101-223-02','102-335-01'   \n",
+      "- Or you can upload a txt file of sample id's, with each id on a separate line  \n",
+      "- To search in all sample id's, enter 'all': \n",
+      "    - sample_list = 'all'\n",
+      "\n",
+      "Trio member and/or wildcard searching (trio_member)  \n",
+      "\n",
+      "- Enter a list of family members to search,as comma_separated values, in the following format:  \n",
+      "  - trio_member = 'NB','M','F'   \n",
+      "- To search for all family members, including extended, enter 'all':   \n",
+      "   - trio_member = 'all'  \n",
+      "- You can also use this list to peform wildcard searches, for example, all trio members LIKE '101-225%':  \n",
+      "    - trio_member = 'NB','M','101-225%'\n",
+      "\n"
      ]
     },
     {
@@ -70,7 +83,8 @@
       "## family id ##\n",
       "###############\n",
       "# uncomment for list \n",
-      "sample_list = '102-07005','102-00997''102-00996','102-02001','102-00961','102-07009','102-00932','102-00979''102-01532','102-00974'\n",
+      "#sample_list = '102-07005-01','102-00997-01'\n",
+      "sample_list = 'all'\n",
       "\n",
       "# uncomment to read in txt file\n",
       "# samples = open('your_samples.txt', 'r').readlines()\n",
@@ -81,6 +95,7 @@
       "####################\n",
       "# enter as NB, M, and/or F, or 'all' to include extended family if available\n",
       "trio_member = 'NB','M','F'\n",
+      "#trio_member = 'all'\n",
       "\n",
       "################\n",
       "## dann_score ##\n",
@@ -117,7 +132,7 @@
       "out_name = 'nbs_genes'"
      ],
      "language": "python",
-     "prompt_number": 41
+     "prompt_number": 2
     },
     {
      "cell_type": "heading",
@@ -157,12 +172,12 @@
       "allowing for more precise matches. \n",
       "\n",
       "        CREATE TABLE nbs_ucsc AS (\n",
-      "             SELECT nbs.*, ucsc.ucsc_id, ucsc.chrom, ucsc.txstart, ucsc.txend\n",
+      "             SELECT DISTINCT nbs.*, ucsc.chrom, ucsc.txstart, ucsc.txend, ucsc.mrna\n",
       "             FROM nbs_genes as nbs, p7_ref_grch37.ucsc_genes as ucsc\n",
       "             WHERE nbs.gene = ucsc.gene_name\n",
       "           )\n",
       "\n",
-      "The results were saved as users _ selasady.nbs _ ucsc containing 682 rows. "
+      "The results were saved as users _ selasady.nbs _ ucsc containing 611 rows. "
      ]
     },
     {
@@ -177,7 +192,7 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "For all specified trio members, variants were annotated with Kaviar, labeling variants under the Kaviar frequency threshold, or not listed in Kaviar, as rare. Variants were then joined with the nbs_ensembl table to retain only variants falling in NBS gene regions.  "
+      "For all specified trio members, variants were annotated with Kaviar, labeling variants under the Kaviar frequency threshold, or not listed in Kaviar, as rare. Variants were then joined with the nbs_ucsc table to retain only variants falling in NBS gene regions.  "
      ]
     },
     {
@@ -196,14 +211,34 @@
       "    if member == 'F':\n",
       "        member_list.append(\"bv.sample_id LIKE '%02'\")\n",
       "    if member_list == 'all':\n",
-      "        member_list =[]\n",
+      "        member_list =''\n",
       "        \n",
-      "member_arg = 'AND (' + ' OR '.join(member_list) + ')'\n",
+      "# if the member argument is not empty create statement\n",
+      "if len(member_list) > 0:\n",
+      "    member_arg = 'AND (' + ' OR '.join(member_list) + ')'\n",
+      "# otherwise statment is empty\n",
+      "else: member_arg = ''\n",
       "\n",
-      "# format all other arguments\n"
+      "# format sample id argument\n",
+      "sample_arg = []\n",
+      "if sample_list != 'all':\n",
+      "    sample_arg.append(\"AND bv.sample_id IN \" + str(sample_list))\n",
+      "    subject_list = \", \".join(str(i) for i in sample_arg)\n",
+      "else: \n",
+      "    subject_list = ''\n",
+      "\n",
+      "# list of user args to join \n",
+      "arg_list = [subject_list, member_arg]\n",
+      "\n",
+      "# if there's an argument, format\n",
+      "if len(arg_list) > 0:\n",
+      "    subject_statement = ' '.join(arg_list)\n",
+      "# otherwise return empty string\n",
+      "else:\n",
+      "    subject_statement = ''"
      ],
      "language": "python",
-     "prompt_number": 36
+     "prompt_number": 12
     },
     {
      "cell_type": "code",
@@ -219,7 +254,7 @@
       "conn=connect(host='glados19', port=21050)"
      ],
      "language": "python",
-     "prompt_number": 39
+     "prompt_number": 13
     },
     {
      "cell_type": "code",
@@ -230,7 +265,7 @@
        "output_type": "stream",
        "stream": "stdout",
        "text": [
-        "The following query will be run on impala: \n\n\n    CREATE TABLE users_selasady.nbs_kaviar AS         \n          WITH bv as (\n              SELECT bv.sample_id, bv.chr as chrom, bv.pos, bv.id, bv.ref, \n                  bv.alt, bv.qual, bv.filter, bv.gt, k.alle_freq, \n                  CASE WHEN (k.alle_freq < .01 OR k.alle_freq IS NULL) then 'rare'\n                  END as kaviar_rare\n             FROM p7_platform.brady_variant bv\n             LEFT JOIN /* +SHUFFLE */ public_hg19.kaviar k\n                  ON bv.chr = k.chromosome\n                  AND bv.pos = k.pos\n                  AND bv.ref = k.ref\n                  AND bv.alt = k.alt\n            AND (bv.sample_id LIKE '%03' OR bv.sample_id LIKE '%01' OR bv.sample_id LIKE '%02')\n         )\n        SELECT bv.*, nbs.gene, nbs.entrez_id, nbs.ensembl_id, nbs.condition, \n            nbs.omim_phenotype, nbs.va_name, nbs.inheritance, nbs.allelic_condition,nbs.in_pgb, \n            nbs.level, nbs.feature, nbs.transcript_name, nbs.transcript_id, nbs.exon_number, \n            nbs.exon_id, nbs.gene_biotype, nbs.comments          \n        FROM bv, users_selasady.nbs_ensembl nbs\n       WHERE bv.chrom = nbs.chrom\n       AND bv.pos BETWEEN nbs.start and nbs.stop\n       \nQuery finished. Closing connection."
+        "Running the following query was run on impala: \n\n\n    CREATE TABLE users_selasady.nbs_kaviar AS         \n          WITH bv as (\n              SELECT bv.sample_id, bv.chr as chrom, bv.pos, bv.id, bv.ref, \n                  bv.alt, bv.qual, bv.filter, regexp_replace(gt, '1/2', '1/1') as geno, k.alle_freq,  \n                  CASE WHEN k.alle_freq < .03 then 'Y'\n                  WHEN (k.alle_freq IS NULL AND (length(bv.alt) = 1)) then 'Y'\n                  ELSE 'N'\n                  END as kaviar_rare\n             FROM p7_platform.brady_variant bv\n             LEFT JOIN /* +SHUFFLE */ public_hg19.kaviar k\n                  ON bv.chr = k.chromosome\n                  AND bv.pos = k.pos\n                  AND bv.alt = k.alt\n            WHERE (bv.chr <> 'X' AND bv.chr <> 'Y')\n             AND (bv.sample_id LIKE '%03' OR bv.sample_id LIKE '%01' OR bv.sample_id LIKE '%02')\n         )\n        SELECT DISTINCT bv.*, nbs.gene, nbs.entrez_gene_id, nbs.condition, nbs.mrna,\n            nbs.omim_phenotype, nbs.va_name, nbs.inheritance, nbs.allelic_condition,nbs.in_pgb, \n            nbs.level, nbs.comments          \n       FROM bv, users_selasady.nbs_ucsc nbs\n       WHERE bv.chrom = nbs.chrom\n       AND bv.pos BETWEEN nbs.txstart and nbs.txend\n       \nQuery finished. Closing connection."
        ]
       },
       {
@@ -248,25 +283,26 @@
       "    CREATE TABLE {}.nbs_kaviar AS         \n",
       "          WITH bv as (\n",
       "              SELECT bv.sample_id, bv.chr as chrom, bv.pos, bv.id, bv.ref, \n",
-      "                  bv.alt, bv.qual, bv.filter, bv.gt, k.alle_freq, \n",
-      "                  CASE WHEN (k.alle_freq < {} OR k.alle_freq IS NULL) then 'rare'\n",
+      "                  bv.alt, bv.qual, bv.filter, regexp_replace(gt, '1/2', '1/1') as geno, k.alle_freq,  \n",
+      "                  CASE WHEN k.alle_freq < {} then 'Y'\n",
+      "                  WHEN (k.alle_freq IS NULL AND (length(bv.alt) = 1)) then 'Y'\n",
+      "                  ELSE 'N'\n",
       "                  END as kaviar_rare\n",
       "             FROM {} bv\n",
       "             LEFT JOIN /* +SHUFFLE */ {} k\n",
       "                  ON bv.chr = k.chromosome\n",
       "                  AND bv.pos = k.pos\n",
-      "                  AND bv.ref = k.ref\n",
       "                  AND bv.alt = k.alt\n",
-      "                  {}\n",
+      "            WHERE (bv.chr <> 'X' AND bv.chr <> 'Y')\n",
+      "            {}\n",
       "         )\n",
-      "        SELECT bv.*, nbs.gene, nbs.entrez_id, nbs.ensembl_id, nbs.condition, \n",
+      "        SELECT DISTINCT bv.*, nbs.gene, nbs.entrez_gene_id, nbs.condition, nbs.mrna,\n",
       "            nbs.omim_phenotype, nbs.va_name, nbs.inheritance, nbs.allelic_condition,nbs.in_pgb, \n",
-      "            nbs.level, nbs.feature, nbs.transcript_name, nbs.transcript_id, nbs.exon_number, \n",
-      "            nbs.exon_id, nbs.gene_biotype, nbs.comments          \n",
-      "       FROM bv, users_selasady.nbs_ensembl nbs\n",
+      "            nbs.level, nbs.comments          \n",
+      "       FROM bv, {}.nbs_ucsc nbs\n",
       "       WHERE bv.chrom = nbs.chrom\n",
-      "       AND bv.pos BETWEEN nbs.start and nbs.stop\n",
-      "       '''.format(out_db, kav_freq, variant_table, kaviar_table, member_arg)\n",
+      "       AND bv.pos BETWEEN nbs.txstart and nbs.txend\n",
+      "       '''.format(out_db, kav_freq, variant_table, kaviar_table, subject_statement, out_db)\n",
       "\n",
       "# open connection, run query, close connection \n",
       "def run_query(query_name, db_name):\n",
@@ -285,7 +321,7 @@
       "run_query(kaviar_query, 'nbs_kaviar')"
      ],
      "language": "python",
-     "prompt_number": 33
+     "prompt_number": 27
     },
     {
      "cell_type": "heading",
@@ -313,7 +349,7 @@
        "output_type": "stream",
        "stream": "stdout",
        "text": [
-        "The following query will be run on impala: \n\n\n       CREATE TABLE IF NOT EXISTS users_selasady.nbs_annotated AS \n        WITH n as (\n            SELECT nbs.*, clin.clin_hgvs, clin.clin_sig, clin.clin_dbn, clin.clin_acc,\n                CASE WHEN (clin.clin_sig NOT REGEXP '3|2[^5]|2 (replace this text with a dollar sign)'  \n                    AND  clin.clin_sig REGEXP '4|[^25]5|^5') THEN 'Y'\n                    ELSE 'N'\n                END AS clin_patho\n            FROM users_selasady.nbs_kaviar nbs\n            LEFT JOIN public_hg19.clinvar clin\n                ON nbs.chrom = clin.chrom\n                AND nbs.pos = clin.pos\n                AND nbs.ref = clin.ref\n                AND nbs.alt = clin.alt\n         )\n        SELECT n.*, \n            CASE WHEN n.alt = 'A' THEN d.score_a\n                WHEN n.alt = 'T' THEN d.score_t\n                WHEN n.alt = 'G' THEN d.score_g\n                WHEN n.alt = 'C' THEN d.score_c \n             END as dann_score, \n             CASE\n                 WHEN SUBSTRING(n.sample_id, -2) = '01'THEN 'M'\n                 WHEN SUBSTRING(n.sample_id, -2) = '02' THEN 'F'\n                 WHEN SUBSTRING(n.sample_id, -2) = '03'THEN 'NB'\n             END as member,\n             SUBSTRING(n.sample_id, 1, (length(n.sample_id)-3)) as family_id,\n             CONCAT(n.chrom, ':', CAST(n.pos AS STRING), ':', n.ref, ':', n.alt) as var_id\n        FROM n\n        LEFT JOIN public_hg19.dann d\n            ON n.chrom = d.chrom\n            AND n.pos = d.pos\n            \nQuery finished. Closing connection."
+        "Running the following query was run on impala: \n\n\n       CREATE TABLE IF NOT EXISTS users_selasady.nbs_annotated AS \n        WITH n as (\n            SELECT nbs.*, clin.clin_hgvs, clin.clin_sig, clin.clin_dbn, clin.clin_acc,\n                CASE WHEN (clin.clin_sig NOT REGEXP '3|2[^5]|2$'  \n                    AND  clin.clin_sig REGEXP '4|[^25]5|^5') THEN 'Y'\n                    ELSE 'N'\n                END AS clin_patho\n            FROM users_selasady.nbs_kaviar nbs\n            LEFT JOIN public_hg19.clinvar clin\n                ON nbs.chrom = clin.chrom\n                AND nbs.pos = clin.pos\n                AND nbs.alt = clin.alt\n         )\n        SELECT DISTINCT n.*,\n            CASE WHEN n.alt = 'A' THEN d.score_a\n                WHEN n.alt = 'T' THEN d.score_t\n                WHEN n.alt = 'G' THEN d.score_g\n                WHEN n.alt = 'C' THEN d.score_c \n             END as dann_score,  \n             CASE\n                 WHEN SUBSTRING(n.sample_id, -2) = '01'THEN 'M'\n                 WHEN SUBSTRING(n.sample_id, -2) = '02' THEN 'F'\n                 WHEN SUBSTRING(n.sample_id, -2) = '03'THEN 'NB'\n             END as member,\n             SUBSTRING(n.sample_id, 1, (length(n.sample_id)-3)) as family_id,\n             CONCAT(n.chrom, ':', CAST(n.pos AS STRING), ':', n.ref, ':', n.alt) as var_id\n        FROM n\n        LEFT JOIN public_hg19.dann d\n            ON n.chrom = d.chrom\n            AND n.pos = d.pos\n            \nQuery finished. Closing connection."
        ]
       },
       {
@@ -330,17 +366,17 @@
       "       CREATE TABLE IF NOT EXISTS {}.nbs_annotated AS \n",
       "        WITH n as (\n",
       "            SELECT nbs.*, clin.clin_hgvs, clin.clin_sig, clin.clin_dbn, clin.clin_acc,\n",
-      "                CASE WHEN (clin.clin_sig NOT REGEXP '3|2[^5]|2 (replace this text with a dollar sign)'  \n",
+      "                CASE WHEN (clin.clin_sig NOT REGEXP '3|2[^5]|2$'  \n",
       "                    AND  clin.clin_sig REGEXP '4|[^25]5|^5') THEN 'Y'\n",
+      "                    ELSE 'N'\n",
       "                END AS clin_patho\n",
       "            FROM {}.nbs_kaviar nbs\n",
       "            LEFT JOIN {} clin\n",
       "                ON nbs.chrom = clin.chrom\n",
       "                AND nbs.pos = clin.pos\n",
-      "                AND nbs.ref = clin.ref\n",
       "                AND nbs.alt = clin.alt\n",
       "         )\n",
-      "        SELECT n.*, \n",
+      "        SELECT DISTINCT n.*,\n",
       "            CASE WHEN n.alt = 'A' THEN d.score_a\n",
       "                WHEN n.alt = 'T' THEN d.score_t\n",
       "                WHEN n.alt = 'G' THEN d.score_g\n",
@@ -363,7 +399,7 @@
       "run_query(dann_query, 'nbs_annotated')"
      ],
      "language": "python",
-     "prompt_number": 40
+     "prompt_number": 29
     },
     {
      "cell_type": "heading",
@@ -397,21 +433,13 @@
       "cur.close()"
      ],
      "language": "python",
-     "prompt_number": 42
+     "prompt_number": 28
     },
     {
      "cell_type": "code",
      "execution_count": null,
      "metadata": {},
-     "outputs": [
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        "104069 variants located in NBS regions.\n"
-       ]
-      }
-     ],
+     "outputs": [],
      "input": [
       "if len(nbs_df) > 0:\n",
       "    print str(len(nbs_df)) + ' variants located in NBS regions.'\n",
